# python-lab4

./: README.md  pyproject.toml  pytest.ini  requirements.txt
src/: main.py  simulation.py
src/_collections/: casino_balance.py  chip_collection.py  player_collection.py
src/common/: constants.py  exceptions.py
src/containers/: casino_balance.py  goose_collection.py  player_collection.py
src/models/: dict_entity.py  game_entity.py  list_entity.py
src/objects/: casino.py  chip.py  goose.py  player.py
tests/: test_casino_balances.py  test_chip.py  test_chip_collection.py  test_goose_collection.py  test_gooses.py  test_player.py  test_player_collection.py  test_simulation.py
