[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-repeat==0.9.4",
    "pytest-mock==3.15.1"
]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=7.0.0",
    "pytest-repeat==0.9.4"
]

[tool.coverage.report]
show_missing = true
fail_under = 80